# Project3-CUDA-Path-Tracer

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  README.md  imgui.ini  rawdata.xlsx  stream-compaction-data.xlsx
JSONs/: FinalCornellWithMeshSpheres.json  FinalCornellWithSonic.json  FinalCornellWithSphereImplicit.json  Spiderman.json
build2/: imgui.ini
glTFs/Cornell/: Cornell.gltf
glTFs/CornellDiffTrans/: CornellDiffTrans.gltf
glTFs/CornellWithSonic/: CornellWithSonic.gltf  SonicWithCornell.gltf
glTFs/CornellWithSphere/: CornellWithSphere.gltf
glTFs/Spiderman/: SpidermanV11.gltf
img/: data.xlsx
models/Princess/: Goldspa.spa  Silverspa.spa  hairspa.spa  princess.mtl
obj_files/burger/: burger.mtl
scenes/: 2Cubes.json  2CubesTest.json  BRDFDisplay.json  Cover.json  DE.json  DS.json  DirectSonic.json  DisneyBRDF.json  Earth.json  Earth.mtl  FinalCornell.json  MISConverge.json  MISShowcase.json  MatTypes.txt  NewCornell.json  NewSonic.json  NoTextureCornell.json  NormalMapCornell.json  Objects.json  PT_veachScene.json  Planets.mtl  SonicCornell.json  SonicRotat.json  TestGltf2.gltf  TriCornell.json  airplane.json  arbitraryObj.json  avocado-gltf.json  avocado.json  base.json  box.mtl  boxes.mtl  bumpmap.json  bunny-obj-vel.json  bunny-obj.json  bunny-red-gltf.json  bunny-specular-obj.json  bunny-specular.json  bunny.gltf  bunny.json  (+146 more)
scenes/Textures/: dva.mtl
scenes/convert/: convert.py  converted_veach.json  pyproject.toml  uncoverted_veach.json
scenes/dof/: cornell.json
scenes/geometry/open_box/: right.gltf
scenes/jsons/default/: cornell.json
scenes/jsons/final_scene/: final.json
scenes/jsons/test_dof/: cornell.json
scenes/jsons/test_loadMesh/: cornell_test_loadMesh.json
scenes/jsons/test_loadTexture/: withTexture.json  withoutTexture.json
scenes/jsons/test_materials/: cornell_dielectrics.json  cornell_dielectrics__diffIOR.json  cornell_microfacets.json
scenes/jsons/test_performance/: cornell_mesh.json  matSort.json  russianRoulette.json
scenes/mesh/: cake.mtl  head.mtl  headphones.mtl  mushroom.mtl  music_box.mtl  wahoo.mtl
scenes/mesh/food/: BBQ.mtl  burger.mtl  cake2.mtl  chicken.mtl  noodle.mtl  roll.mtl  wafflet.mtl
scenes/meshes/: Spud.mtl
scenes/meshes/glb/: bathroom.glb
scenes/objs/: Cover.mtl  Mineways2Skfb.mtl  cup2.mtl  dodecahedron.mtl  fabric.mtl  glass.mtl  sphere.mtl
scenes/objs/spongebob/: spongebob.mtl
scenes/test_loadMesh/: cornell_test_loadMesh.json  setting.txt
scenes/test_loadObj/: cornell_test_loadObj.json
scenes/test_loadTexture/: cornell_test_loadTexture.json
scenes/textures/rock/: source.txt
scripts/: voxelize2json.py
src/: BVH.cpp  Light.cu  Light.h  PTDirectives.h  application.cpp  application.h  bbox.h  bsdf.cu  bsdf.h  bvh.cpp  bvh.cu  bvh.h  bvhTest.cpp  bxdf.cu  bxdf.h  cudaUtilities.cu  cudaUtilities.h  cuda_test.cu  cuda_test.h  denoise.cu  denoise.h  denoiser.h  disneybsdf.h  distribution1D.cpp  distribution1D.h  distribution2D.cpp  distribution2D.h  fileSystem.cpp  fileSystem.h  flags.h  ggx.cu  ggx.h  glTFLoader.cpp  glTFLoader.h  glslUtility.cpp  glslUtility.hpp  gltfLoader.cpp  gltfLoader.h  guiDataContainer.cpp  guiDataContainer.h  (+55 more)
src/ImGui/: ImGuiFileDialog.cpp  imgui.cpp  imgui.h
src/path_tracer/: bsdf.cu  bsdf.h  buffers.h  camera.cpp  camera.h  cuda_pt.cu  cuda_pt.h  ggx.cu  ggx.h  intersection.cu  intersection.h  optix_denoiser.cpp  optix_denoiser.h  path_tracer.cpp  path_tracer.h  scene.cpp  scene.h  scene_structs.h  util.h
src/vk/: vk_context.cpp  vk_context.h  vk_cu_interop.cpp  vk_cu_interop.h  vk_queue.h  vk_swapchain.h  vk_texture.h  vk_window.cpp  vk_window.h
stream_compaction/: CMakeLists.txt  common.cu  common.h  cpu.cu  efficient.cu  naive.cu  thrust.cu  thrust.h
